--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 
 <body class="bodie">
     <script src="./main.js"></script>
-    <h1 id="page-landing">Proffy</h1>
 
-    <p>
-        <span>Aqui:</span>
-        Sua plataforma de estudos online
-    </p>
-    <img src="" alt="">
-    <button>Estudar</button>
-    <button>Dar Aulas</button>
+    <div class="container">
+        <h1 id="page-landing">Proffy</h1>
+
+        <p>
+            <span>Aqui:</span>
+            Sua plataforma de estudos online
+        </p>
+        <img src="" alt="">
+        <button>Estudar</button>
+        <button>Dar Aulas</button>
+    </div>
 
 </body>
 
