--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Proffy | Sua plataforma de estudos</title>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
+
 </head>
 
 <body class="bodie">
@@ -15,11 +17,8 @@
     <div class="container">
         <h1 id="page-landing">Proffy</h1>
 
-        <p>
-            <span>Aqui:</span>
-            Sua plataforma de estudos online
-        </p>
-        <img src="" alt="">
+        <p> Sua plataforma de estudos online</p>
+
         <button>Estudar</button>
         <button>Dar Aulas</button>
     </div>
