--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/partials/page-landing.css">
     <title>Proffy | Sua plataforma de estudos</title>
+   
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
 </head>
 
-<body class="bodie">
+<body id="page-landing">
     <script src="./main.js"></script>
 
-    <div class="container">
-        <h1 id="page-landing">Proffy</h1>
-
-        <p> Sua plataforma de estudos online</p>
+    <div id="container">
+        <div class="logo-container">
+            <img src="/images/logo.svg" alt="logo da pagina">
+            <h2> Sua plataforma de estudos online</h2>
+        </div>
 
         <button>Estudar</button>
         <button>Dar Aulas</button>
