--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/partials/page-landing.css">
     <title>Proffy | Sua plataforma de estudos</title>
-   
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -22,8 +24,18 @@
             <h2> Sua plataforma de estudos online</h2>
         </div>
 
-        <button>Estudar</button>
-        <button>Dar Aulas</button>
+        <img class="hero-image" src="/images/landing.svg" alt="plataforma de estudo">
+
+        <div class="buttons-container">
+            <a class="study" href="/study.html">
+                <img src="/images/icons/study.svg" alt="Estudar">
+                Estudar
+            </a>
+            <a class="give-classes" href="/images/icons/give-classes.svg">
+                <img src="/images/icons/give-classes.svg" alt="Dar aulas">
+                Dar Aula
+            </a>
+        </div>
     </div>
 
 </body>
