--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                 Dar Aula
             </a>
         </div>
+    <p class="total-connections">
+        Total de 200 conexões já realizadas
+        <img src="./images/icons/purple-heart.svg" 
+        alt="coração roxo">
+    </p>
     </div>
 
 </body>
