--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/partials/page-landing.css">
     <title>Proffy | Sua plataforma de estudos</title>
-<link rel="shortcut icon" href="./images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
     <link
         href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
         rel="stylesheet">
@@ -37,11 +37,10 @@
                 Dar Aula
             </a>
         </div>
-    <p class="total-connections">
-        Total de 200 conexões já realizadas
-        <img src="./images/icons/purple-heart.svg" 
-        alt="coração roxo">
-    </p>
+        <p class="total-connections">
+            Total de 200 conexões já realizadas
+            <img src="./images/icons/purple-heart.svg" alt="coração roxo">
+        </p>
     </div>
 
 </body>
