--- a/give-classes.html
+++ b/give-classes.html
@@ -86,8 +86,46 @@
 
                 </fieldset>
 
+                <fieldset>
+                    <legend>Horários Disponíveis
+                        <button id="add-time">+ Novo Horário</button>
+                    </legend>
+                    <div class="schedule-item">
+                        <div class="select-block">
+                            <label for="weekday">Dia da semana</label>
+                            <select name="weekday[]" request>
+                                <option value="">Selecione uma opção</option>
+                                <option value="1">Domingo</option>
+                                <option value="2">Segunda-feira</option>
+                                <option value="3">Terça-feira</option>
+                                <option value="4">Quarta-feira</option>
+                                <option value="5">Quinta-feira</option>
+                                <option value="6">Sexta-feira</option>
+                                <option value="6">Sábado</option>
+                            </select>
+                        </div>
 
+                        <div class="input-block">
+                            <label for="time_from">Das</label>
+                            <input type="time" name="time_from[]">
+                        </div>
+                        <div class="input-block">
+                            <label for="time_to">Até</label>
+                            <input type="time" name="time_to[]">
+                        </div>
+
+                    </div>
+                </fieldset>
             </form>
+
+            <footer>
+                <p>
+                    <img src="./images/icons/warning.svg" alt="Aviso importante"> 
+                    Importante! <br>
+                    Preencha todos os dados
+                </p>
+                <button type="submit" Form="page-give-classes">Salvar Cadastro</button>
+            </footer>
         </main>
     </div>
 
